--- a/www/css/professoresEstilo.css
+++ b/www/css/professoresEstilo.css
@@ -81,7 +81,9 @@ a{
 }
 
 #content {
-	margin-top: 4rem;
+	margin-top: 4.4rem;
+
+
 }
 #close{
 	position: fixed;
@@ -121,9 +123,28 @@ button{
 	border-radius: 0.20rem;
 	
 }
-.nome{
+.valReceived{
+	color: #CFE9F2;
 	font-family: 'OpenSans';
-	color: #23a96e;
-	font-size: 2rem;
-
+	
+	font-size: 1.5rem;
+	margin-left: 6%;	
 }
+.estilizarTpl{
+	border-style: solid;
+	border-width: 1px;
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;
+	border-color: #23a96e;
+	width: 100%;
+	padding-top: 3%;
+	padding-bottom: 3%;	
+	
+}
+.lbStyle{	
+	font-family: 'OpenSans';
+	color: #7CF5C0;
+	font-size: 1.5rem;
+}
+
