--- a/www/css/projetosEstilo.css
+++ b/www/css/projetosEstilo.css
@@ -123,7 +123,7 @@ span{
 button{
 	padding: 3% 1%;
 	width: 49%;
-	margin-top: 80%;
+	margin-top: 39%;
 	margin-left: 0.5%; 
 	font-family: 'OpenSans';
 	font-size: 1rem;
@@ -131,4 +131,29 @@ button{
 	background-color: #23a96e;
 	color: white;
 	border-radius: 0.20rem;
+}
+
+.valReceived{
+	color: #CFE9F2;
+	font-family: 'OpenSans';
+	
+	font-size: 1rem;
+	margin-left: 6%;	
+}
+.estilizarTpl{
+	border-style: solid;
+	border-width: 1px;
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;
+	border-color: #23a96e;
+	width: 100%;
+	padding-top: 3%;
+	padding-bottom: 3%;		
+	
+}
+.lbStyle{	
+	font-family: 'OpenSans';
+	color: #7CF5C0;
+	font-size: 1.5rem;
 }
